Assignment ready for submission.

--- a/submissions/mcclellan_julian/a2/experiment.Rmd
+++ b/submissions/mcclellan_julian/a2/experiment.Rmd
@@ -2,16 +2,20 @@
 title: "Data Viz | Assignment 2"
 author: "Julian McClellan and Jonathan Camacho"
 date: "April 23, 2017"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
+  word_document: default
 ---
 
-```{r setup, include=FALSE, message=FALSE}
+```{r setup, include=FALSE, message=FALSE, echo = FALSE, }
 library(tidyverse)
+library(devtools)
 theme_set(theme_minimal())
-knitr::opts_chunk$set(include = FALSE, message = FALSE)
+knitr::opts_chunk$set(include = TRUE, message = FALSE)
 ```
 
-```{r screening_data}
+```{r screening_data, echo = FALSE, message=FALSE}
 color_options <- c("red", "green", "blue")
 groups <- c("1", "2")
 num_rows <- 10
@@ -25,7 +29,7 @@ screen_stack <- screening_dat %>%
     ggplot(aes(x = group, fill = color)) + 
       geom_bar(position = "stack") +
       labs(y = "height",
-           x = "")
+           x = "", title = "Plot 1. Screen Stack Plot.")
 
 screen_dodge <- screening_dat %>%
     ggplot(aes(x = group, fill = color)) + 
@@ -34,7 +38,7 @@ screen_dodge <- screening_dat %>%
            x = "")
 ```
 
-```{r fake_data}
+```{r fake_data, echo=FALSE, message=FALSE}
 num_rows <- 50
 set.seed(69)
 color_options <- c(rep(color_options, 5), rep("green", 5))
@@ -56,21 +60,48 @@ test_dodge <- fake_dat %>%
     geom_col(position = "dodge") + 
     scale_x_discrete() +
     labs(x = "",
-         y = "height")
+         y = "height", title = "Plot 2. Test Dodge Plot.")
 
 gonly <- fake_dat %>% filter(color == "green")
 
 true_value <- sum(gonly$height)
 ```
+### Introduction
 
-```{r save_plots}
+
+One of the objectives of data visualization is to facilitate the reader’s understanding and extraction of the data. In this sense, Cairo (2016) highlights the importance of correctly selecting the best ways for data coding. He proposes a Hierarchy of Elementary perceptual tasks, developed and tested by William S. Cleveland and Robert McGill, as a guide to determining the best channels for coding data. According to this _Hierarchy of Elementary Perceptual Tasks_, position along identical scales is the most effective mental-visual task; allowing readers to extract information more accurately from plots.
+
+In this assignment, we expand this idea arguing that the context of the position of the data also has an important effect on the effectiveness of the mental-visual task and people’s ability to accurately find and extract information from a plot. We pose the following research question: Is data in a stacked bar plot more difficult to estimate and extract than data in a dodge bar plot? We hypothesize that the sum of the bar heights extracted from a stack plot is less accurate than the sum of bar heights extracted from a dodge plot. We assume as a mechanism, the fact that bars in a dodge plot have a baseline based on zero while bars in a stack plot have a variable baseline. The idea is that having a baseline of zero facilitates information estimation and extraction. 
+
+### Methods 
+To test this hypothesis, we designed an experiment consisting of one task: estimating the sum of bar heights from a plot. The participants have to read the heights of two bars (the green bars) from data divided into two groups in the same plot and add the heights to create a total height. To compare the effect that stacked vs. dodge positioning of information has on the participants' ability to estimate the bars' sum, the data is presented in two different types of plots: one stacked and the other dodged. 
+
+Moreover, to test the accuracy of the experimental procedure, participants are asked to perform the task twice; First, with two _screen_ plots (one stacked and one dodged) and with one _test_ plot. Both plot sets consist of one stack and one dodge plot. The _screen_ set of plots were created with data randomly generated with the purpose of setting a validity benchmark for the data; how accurately participant can extract information with an easy version of the tasks. (Plot 1) The bar heights are more precise and thus easier to sum in the _screen_ plots, while the bar heights in the _test_ plots are less precise.
+
+
+```{r, echo=FALSE}
+screen_stack
+```
+
+
+Then, randomly, we assigned each participant to one plot from the _test_ set; a stacked or a dodged plot. (Plot 2) The participant has to estimate the total height of the green bars for this task. The data for this experiment was collected through a survey developed in Qualtrics and deployed through the online platform Mechanical Turk from Amazon. Data from this experiment was collected from a 100 participants, 50 to each plot type. The data was cleaned, transformed (the results were separated into a stack, dodge and all results data set), and analyzed. For this experiment, we developed two variables. The independent variable is the type of plot (stack or dodge), and it is operationalized as the type of plot presented to the participants. The dependent variable is the sum of green bar heights estimated by the participant. 
+
+
+```{r save_plots, echo=FALSE, message=FALSE}
 # ggsave("screen_stack.png", device = "png", plot = screen_stack, dpi = 100, width = 6, height = 4)
 # ggsave("screen_dodge.png", device = "png", plot = screen_dodge, dpi = 100, width = 6, height = 4)
 # ggsave("test_stack.png", device = "png", plot = test_stack, dpi = 100, width = 6, height = 4)
 # ggsave("test_dodge.png", device = "png", plot = test_dodge, dpi = 100, width = 6, height = 4)
+test_dodge
 ```
 
-```{r results}
+
+### Data Summary
+
+Below (Plot 3) shows the density distributions of participants responses: the total sum of the height of the two green bars in the plot. The data is presented according to the randomly assigned plot to the participant: stacked or dodge. The plot suggests that the sums of green bars estimated from the stack plot have less variance than the sums estimated from the dodge plot, which has a flatter distribution of estimated sums, with what seems like a left-skew.
+
+
+```{r results, echo=FALSE, message=FALSE, warning=FALSE}
 # FOR_JON:
 #
 # Jon, note that I conducted a 
@@ -97,7 +128,6 @@ all_valid_results <- read_csv('Dataviz_April-24-2017_09.53.csv') %>%
   mutate_each(funs = "as.numeric") %>%
   filter(Q1 == 2 & Q2 == 2) %>%
   select(Q3, Q4)
-        
 
 # FOR_JON: 
 # This density plot isn't displayed by default (so you can choose where to display it), display it by typing "stack_hist" again
@@ -108,8 +138,20 @@ plot.summary_density <- all_valid_results %>%
     scale_color_manual(values = c("Stacked" = "red", "Dodged" = "blue")) + 
     labs(color = "Chart Type",
          x = "Sum of Green Bars",
-         title = "Density of Responses for the sum of two green bars")
+         title = "Plot 3. Density of Responses for the sum of two green bars.")
 
+plot.summary_density
+```
+
+
+### Analysis
+To determine whether the distributions of dodged and stack bar heights captured the true sum of the green bars, we conduct a bootstrap mean test was conducted with a 95% confidence interval. Finally, an F-test was also conducted to compare two variances. However, the F-test might not be the most powerful variance test available, given that both distributions are not perfectly normal.
+ 
+In Plot 4 below, we see that the confidence interval for the stacked means is much wider compared to that of the dodged means. Still, the stacked confidence interval actually captures the original mean, while the dodge confidence interval does not. 
+
+Finally, to compare the two variances (means from stack and dodge plots), an F-test was conducted. It is important to note that the p-value is significantly low, indicating that the variances are probably unequal.
+
+```{r, echo=FALSE, message=FALSE}
 # Bootstrap testing function
 calc_stat_ci <- function(vector, fun_name, conf = .95, h0 = true_value, num_samples = 20000){
   require(bootstrap)
@@ -148,16 +190,32 @@ plot.boot_means <- boot_means %>% ggplot(aes(x = boot_means, color = chart_type)
   geom_vline(xintercept = real_dodge_mean, color = "red") + 
   geom_vline(xintercept = real_stack_mean, color = "cyan3") + 
   annotate("text", x = real_dodge_mean, y = .30, label = "True Sum Mean") +
-  annotate("text", x = real_stack_mean, y = .30, label = "True Sum Mean") +
-  labs(title = "Bootstrap mean test for sum of green bars\n95% confidence intervals and true sum means shown",
+  annotate("text", x = real_stack_mean, y = .25, label = "True Sum Mean") +
+  labs(title = "Plot 4. Bootstrap mean test for sum of green bars\n95% confidence intervals and true sum means shown.",
        x = "Bootstrap Mean",
        color = "Chart Type")
 
+plot.boot_means
+f_test_results <- var.test(stack_results, dodge_results)
+```
+
+### Conclusion.
+
+For this experiment, we hypothesized that information presented in a stack plot it is more difficult to estimate accurately than information presented in a dodge plot. The results from the statistical analysis seem to contradict this hypothesis, but in an surprising way.
+
+While the estimations of dodge plot readers was more tightly distributed (more precise), a bootstrap means test shows that the true value of the green bar heights was not captured by the distribution, showing that the dodged chart readers were more precise but less accurate. On the other hand, the distribution of estimations from the stacked plot readers was more spread (less precise), but that distribution was able to capture the true sum of the green bars, and was thus more accurate. These results seem to indicate that presenting data in dodged bars format facilitates more precise, if more inaccurate, information estimation compared to presenting data in a stacked bar format.
+
+We do note however that the distribution of the dodged bar readers appear clustered around `100`, indicating that there might be some "hundreds" round up bias. The true value: `r true_value` might have been too closely convenient to `100` for readers of the dodged chart to more precisly refine their estimates.
+
+#### Citations.
+- Cairo, Alberto. The Truthful Art: Data, charts, and maps for communication. New Riders, 2016.
+
+```{r, echo=FALSE, message=FALSE}
 # FOR_JON:
 # This is an F test to compare two variances. Note that the p value is quite low, indicating that the variances
 # are probably un equal.
 #
 # This is probably the most concrete result we've attained. We can say that the dodged estimates have 
 # a significantly lower variance than the stacked results.
-f_test_results <- var.test(stack_results, dodge_results)
+devtools::session_info()
 ```
