Small changes made.

--- a/submissions/mcclellan_julian/a2/experiment.Rmd
+++ b/submissions/mcclellan_julian/a2/experiment.Rmd
@@ -84,7 +84,7 @@ screen_stack
 ```
 
 
-Then, randomly, we assigned each participant to one plot from the _test_ set; a stacked or a dodged plot. (Plot 2) The participant has to estimate the total height of the green bars for this task. The data for this experiment was collected through a survey developed in Qualtrics and deployed through the online platform Mechanical Turk from Amazon. Data from this experiment was collected from a 100 participants, 50 to each plot type. The data was cleaned, transformed (the results were separated into a stack, dodge and all results data set), and analyzed. For this experiment, we developed two variables. The independent variable is the type of plot (stack or dodge), and it is operationalized as the type of plot presented to the participants. The dependent variable is the sum of green bar heights estimated by the participant. 
+Then, randomly, we assigned each participant to one plot from the _test_ set; a stacked or a dodged plot. (Plot 2) The participant has to estimate the total height of the green bars for this task. The data for this experiment was collected through a survey developed in Qualtrics and deployed through the online platform Mechanical Turk from Amazon. Data from this experiment was collected from a 100 participants, 50 to each plot type. The data was cleaned, transformed (the results were separated into a stack, dodge and all results data set), and analyzed. Those participants who were unable to answer the first two screening questions correctly were omitted. This resulted in 21/50 valid observations for the stacked chart and 30/50 valid observations for the dodged chart. For this experiment, we developed two variables. The independent variable is the type of plot (stack or dodge), and it is operationalized as the type of plot presented to the participants. The dependent variable is the sum of green bar heights estimated by the participant. 
 
 
 ```{r save_plots, echo=FALSE, message=FALSE}
