--- a/submissions/Westley_Dana/Assignment2/Assignment2.Rmd
+++ b/submissions/Westley_Dana/Assignment2/Assignment2.Rmd
@@ -43,9 +43,10 @@ exp(coef(mod1))       #Shaded = .1118, shaded group was 89% less likely to be ac
 log_reg <-ggplot(survey, aes(Treatment, fill = AccuracyLeast)) + 
   geom_bar(aes(y = (..count..)/sum(..count..)*2)) + 
   scale_y_continuous(labels = percent) + 
+  theme_bw() + 
   labs(title = "Color Shading Group Less Accurate \n at Identifying Smallest Bar Height", 
        y = "Percent", caption ="β = -2.19, p<.01") + 
-  theme(plot.title=element_text(size=25, hjust = 0.5)) + 
+  theme(plot.title=element_text(size=25, hjust = 0.5)) +
   scale_fill_manual(values=c("firebrick1", "darkolivegreen2"))
 log_reg
 
